# stockly

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
backend/: app.py
docs/: test-report-2026-03-27.md
scripts/: seed_demo_history.py
src/backend/: app.py
src/backend/jiancang/: __init__.py  db.py  http_handler.py  security.py  services.py
src/backend/jiancang/db/: __init__.py  connection.py  constants.py  migrations.py  schema.py  seed.py
src/backend/jiancang/services/: __init__.py  auth.py  document_support.py  documents.py  inventory.py  models.py  service.py  statistics.py  tenant_queries.py  tenants.py  validators.py
src/web/: app.html  index.html  styles.css  tenant.html
src/web/js/: api.js  app.js  auth.js  main.js  router.js  store.js  tenant.js  ui.js  utils.js
src/web/js/pages/: account.js  adjustment.js  customers.js  document-detail.js  documents.js  home.js  inventory.js  more.js  products.js  purchase.js  sale.js  stats.js  suppliers.js  tenant-detail.js  tenants.js
tests/: conftest.py  test_inventory_service.py
web/: index.html  styles.css
web/js/: api.js  main.js  ui.js
